# leads-sender

./: .gitignore  README.md  docker-compose.yml  product.md
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: celery_app.py  config.py  db.py  events.py  gemini.py  main.py  models.py  pipeline.py  scanner.py  store.py
backend/app/steps/: draft.py  normalize.py  permute.py  research.py  send.py  verify.py
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/leads/[id]/: page.tsx
frontend/components/: LeadCard.tsx  LeadDetail.tsx  LogStream.tsx  StepTimeline.tsx  UploadMd.tsx
frontend/lib/: api.ts  sse.ts  types.ts  utils.ts
